# cwgl-proto

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  testapp.c  testfw.cpp
apps/: CMakeLists.txt
duk-nccc/: CMakeLists.txt  bootstrap.js  duk-nccc.c  yuniduk.c
duktape260/: duk_config.h
include/: cwgl.h  yfrm.h
jstestapp/: README.md  audioctx-mini.js  check.js  cwgl.js  emucanvas.js  getenumtype.js  glenums.js  index.js  nccc-node.js  ncccutil.js  package-lock.json  package.json  port-native.js  port-std.js  rollup.config.js  storage.js  wasmproxy.js  webgl-cwgl.js  yfrmfs.js
jstestapp/app/: example_emscripten_opengl3.html  example_emscripten_opengl3.js  example_emscripten_opengl3.wasm
jstestapp/app2/: gltest2.framework.js  gltest2.loader.js
jstestapp/app2/appfs/: ScriptingAssemblies.json
jstestapp/app2/appfs/Resources/: unity_default_resources
jstestapp/dlltest/: .gitignore  CMakeLists.txt  rt.c
ncccstubs/: CMakeLists.txt  colroot.c  stub_yfrm.cmake  stubcode.inc.c  stublead.c  stublead.cwgl.c  stublead.yfrm.c  stubprefix_cwgl.h  stubprefix_yfrm.h
node-nccc/: CMakeLists.txt  index.js  ncccdlfcn.c  ncccutils.c  node-nccc.c  testlib.c
node-nccc/napi-includes/: README.md
node-nccc/tests/: check.js  package-lock.json  package.json
src-gles2/: check.c  cwgl-gles2-ctxsdl2.c  cwgl-gles2-priv.h  cwgl-gles2-s2.c  cwgl-gles2-s3.c  cwgl-gles2-s4.c  cwgl-gles2-s6obj.c  cwgl-gles2-s6shader.c
stubgen/: NcccParseW2cHeader.cmake  NcccParseW2cSource.cmake  NcccStubMacros.cmake  NcccTemplateW2cMetadata.cmake  NcccW2cDataGen.cmake  stub.c
unpackunitywebgl/: index.js
wasmstub/: rt.c  stub.inc.c  wasm-rt.h
yfrm/src-cxx17/: yfrm-fs-cxx17.cpp
yfrm/src-sdl2/: yfrm-ctx-sdl2.c
